Better readable Makefile for TP

--- a/tetris/clean/Makefile
+++ b/tetris/clean/Makefile
@@ -1,10 +1,10 @@
-SOURCES=tetris grid window
+SOURCES=tetris.c grid.c window.c
 CFLAGS=$(shell pkg-config --cflags gtk+-2.0)
 LDLIBS=$(shell pkg-config --libs gtk+-2.0)
 
 all: tetris
 
 clean:
-	rm -f tetris $(SOURCES:=.o)
+	rm -f tetris $(SOURCES:.c=.o)
 
-tetris: $(SOURCES:=.o)
+tetris: $(SOURCES:.c=.o)
